Extension Installer layout/3

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -395,7 +395,7 @@ SP.APPS.LIST_FIELDS="Fields"
 SP.APPS.LIST_TEMPLATES="Templates"
 SP.APPS.LIST_LANGUAGES="Languages"
 SP.APPS.LIST_OTHERS="Others"
-SP.EX.LAST_UPDATED="Last update: %s"
+SP.EX.LAST_UPDATED="You performed the last update of the available applications list at %s.<br/>To renew the list click on the 'Fetch Updates' button."
 SP.EX.INSTALL_APP="Install"
 SP.EX.REINSTALL_APP="Re-install"
 SP.EX.UPDATE_APP="Update"
@@ -1089,7 +1089,7 @@ SP.EX.CON_TO_REPO_D_D="Connecting to repository var:[num]/var:[from]"
 SP.EX.FETCHING_FROM_REPO_D_D="Fetching list from repository var:[num]/var:[from]"
 SP.EX.FETCHED_LIST_FROM_REPOSITORY="Fetched list with var:[count] applications from repository var:[num]/var:[from]"
 SP.EX.FETCHED_D_EXTENSIONS="Fetched var:[count] applications"
-SP.EX.EXT_LIST_UPDATED="Application list has been updated"
+SP.EX.EXT_LIST_UPDATED="Applications list has been updated."
 SP.EX.MSG_UPDATE_FIRST="The list of available applications is empty at the moment. Hit the &#34;Fetch Updates&#34; button to refresh the list."
 SP.EX.SELECT_TO_DELETE_ERR="Please select an application to delete from the list first!"
 SP.EX.CANNOT_LOAD_PLUGIN_DEF_ERR="Cannot load application definition file - aborted"
