Requirements checker for Joomla! extensions

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -83,6 +83,7 @@ SP.CANNOT_INSERT_GROUPS_DB_ERR="Cannot insert groups/rule. Db reports: %s."
 SP.CANNOT_INSTALL_EXT_CORE="Cannot install extension. This extension requires SobiPro version >= %s, But the currently installed version is %s."
 SP.CANNOT_INSTALL_EXT_FIELD="Cannot install extension. This extension requires %s %s version >= %s, But the currently installed version is %s."
 SP.CANNOT_INSTALL_EXT_PLG="Cannot install extension. This extension requires %s %s version >= %s, But this %s is not installed."
+SP.CANNOT_INSTALL_EXT_PLG_NO_VERSION="Cannot install extension. This extension requires %s %s, But this %s is not installed."
 SP.CANNOT_INSTALL_EXT_REQ="Cannot install extension. This extension requires %s version >= %s, But the currently installed version is %s."
 SP.CANNOT_INSTALL_EXT_REQU_CMS="Cannot install extension. This extension requires %s version >= %s, But the currently installed CMS is %s."
 SP.CANNOT_INSTALL_FIELD_DB_ERR="Cannot install new field. Db insert failed. Error: %s"
