Extension Installer layout/5

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -823,8 +823,8 @@ SP.MSG.ALL_CHANGES_SAVED="All changes saved."
 SP.SEC.CFG.BASIC_SETTINGS="Basic Settings"
 SP.SEC.CFG.CLISTING_SETTINGS="Categories Listing Settings"
 SP.SEC.CFG.ELISTING_SETTINGS="Entries Listing Settings"
-SP.SEC.DEL_WARN="This section cannot be deleted because it contains entries or/and categories. Please delete all categories and entries within this section first"
-SP.SEC.CREATED="New Section has been created. Please don\'t forget to create new permissions set for the newly created section"
+SP.SEC.DEL_WARN="This section cannot be deleted because it contains entries or/and categories. Please delete all categories and entries within this section first."
+SP.SEC.CREATED="New Section has been created. Please don\'t forget to create new permissions set for the newly created section."
 SP.SEC.CFG.ALPHAMENU_SETTINGS="Alpha-Listing Settings"
 SP.SEC.CFG.ALPHA_FIELD="Primary Field for Alpha-Listing"
 SP.SEC.CFG.ALPHA_FIELDS="Additional Fields for Alpha-Listing"
@@ -1070,18 +1070,18 @@ SP.ENTRY.CHECKED_OUT_BY="This entry is being edited by var:[user]"
 SP.EX.SAM="Application Manager"
 SP.EX.MANAGER="Application Manager"
 SP.EX.LAST_UPDATE="Last update:"
-SP.EX.UPDATING="Please wait, updating applications list:"
-SP.EX.DOWNLOADING="Please wait, downloading application:"
-SP.EX.SSL_VERIFY="Please verify repository provider information"
-SP.EX.CONNECTING_TO_REPO="Connecting to the repository"
-SP.EX.SELECT_EXT_FROM_LIST="Please select an application from the list first"
+SP.EX.UPDATING="Please wait, updating applications list."
+SP.EX.DOWNLOADING="Please wait, downloading application."
+SP.EX.SSL_VERIFY="Please verify repository provider information."
+SP.EX.CONNECTING_TO_REPO="Connecting to the repository."
+SP.EX.SELECT_EXT_FROM_LIST="Please select an application from the list first."
 SP.EX.CONNECTING_TO_REPO_NAME="Connecting to repository var:[repo]"
-SP.EX.SENDING_REQUEST_TO="Sending request to var:[repo]"
+SP.EX.SENDING_REQUEST_TO="Sending request to var:[repo]."
 SP.EX.REPO_FEEDBACK_REQ="Feedback Requested"
 SP.EX.REC_PACKAGE_WITH_TYPE_NAME="Receiving package with var:[type] &#34;var:[name]&#34;"
 SP.EX.PARSING_RESPONSE="Parsing response"
 SP.EX.EXAMINING_CHECKSUM="Storing package and examining the checksum"
-SP.EX.CHECKSUM_NOK="File checksum does not match the given one. Installation failed"
+SP.EX.CHECKSUM_NOK="File checksum does not match the given one. Installation failed."
 SP.EX.CHECKSUM_OK="Checksum is ok ... installing"
 SP.EX.GETTING_REPOS="Getting available repositories"
 SP.EX.FOUND_NUM_REPOS="Found var:[count] repositories"
@@ -1091,14 +1091,14 @@ SP.EX.FETCHED_LIST_FROM_REPOSITORY="Fetched list with var:[count] applications f
 SP.EX.FETCHED_D_EXTENSIONS="Fetched var:[count] applications"
 SP.EX.EXT_LIST_UPDATED="Applications list has been updated."
 SP.EX.MSG_UPDATE_FIRST="The list of available applications is empty at the moment. Hit the &#34;Fetch Updates&#34; button to refresh the list."
-SP.EX.SELECT_TO_DELETE_ERR="Please select an application to delete from the list first!"
-SP.EX.CANNOT_LOAD_PLUGIN_DEF_ERR="Cannot load application definition file - aborted"
-SP.EX.CANNOT_CHANGE_STATE_ERR="Cannot change state of the selected application"
+SP.EX.SELECT_TO_DELETE_ERR="Select an application to delete from the list first!"
+SP.EX.CANNOT_LOAD_PLUGIN_DEF_ERR="Cannot load application definition file - aborted."
+SP.EX.CANNOT_CHANGE_STATE_ERR="Cannot change state of the selected application."
 SP.EX.REPO_HAS_BEEN_ADDED="Repository at var:[location] has been added."
-SP.EX.REPO_HAS_BEEN_ADDED_WITH_MSG="Repository at var:[location] has been added. var:[msg]"
-SP.EX.NO_REPOSITORY_SELECTED="No repository has been selected"
+SP.EX.REPO_HAS_BEEN_ADDED_WITH_MSG="Repository at var:[location] has been added. var:[msg]."
+SP.EX.NO_REPOSITORY_SELECTED="No repository has been selected."
 SP.EX.REPOSITORY_DELETED="Repository has been deleted."
-SP.EX.PLUGIN_ALLREADY_INSTALLED="Application &#34;var:[name]&#34; is already installed. Please uninstall it first."
+SP.EX.PLUGIN_ALLREADY_INSTALLED="Application &#34;var:[name]&#34; is already installed. Uninstall it first."
 SP.EX.PAYMENT_METHOD_TYPE="payment method"
 SP.EX.FIELD_TYPE="field"
 SP.EX.PLUGIN_TYPE="application"
@@ -1133,7 +1133,7 @@ SP.EX.SSL_CERT_INFO="Certificate Information"
 SP.EX.SSL_CERT_SN="Serial Number:"
 SP.EX.SSL_CERT_SINCE="Issued On:"
 SP.EX.SSL_CERT_UNTIL="Expires on:"
-SP.EX.SSL_CONFIRM_BT="Yes, these data are correct. Add this repository please"
+SP.EX.SSL_CONFIRM_BT="Yes, these data are correct. Add the repository please."
 SP.EX.SSL_SKIP_BT="No, thanks"
 ; Installed extensions
 SP.EX.INSTALLED="Installed Applications"
