--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -46,6 +46,7 @@
    (+) Template override for specific categories and entries via Joomla! Menu Manager
    (+) Workaround to bypass Joomla! menu type bug
    (+) Possibility to define exact type of custom output including header content type, exit and clear
+   (+) Limit XML raw data to a specific IP
 
    (-) Vehicle template removed. Will be a separate template now.
 
@@ -64,6 +65,7 @@
    (!) No fix MyISAM database type on installation
    (!) Sendmail account information removed from system check file
    (!) Category meta description does not longer ends with a dot
+   (!) Handling for jQuery conflicts with other jQuery libraries improved
 
    (#) {entry.url} placeholder doesn't work (Issue #708)
    (#) Typo in text label in Entry Manager
