--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -46,15 +46,15 @@ SP.CANNOT_CHANGE_FIELD_STATE="Cannot change field state. Db reports: %s."
 SP.CANNOT_CREATE_RULE_DB_ERR="Cannot create rule. Db reports: %s."
 SP.CANNOT_CREATE_SESSION_DB_ERR="Cannot create session. Db reports: %s."
 SP.CANNOT_DELETE_CATEGORY_DB_ERR="Cannot delete category. Db reports: %s."
-SP.CANNOT_DELETE_DB_ENTRIES="Cannot delete certain database entries in the table '%s'. Db query failed. Error: %s"
+SP.CANNOT_DELETE_DB_ENTRIES="Cannot delete certain database entries in the table '%s'. Db query failed. Error: %s."
 SP.CANNOT_DELETE_FIELD_DATA="Cannot delete field data. Db reports: %s."
-SP.CANNOT_DELETE_PLUGIN_DB_ERR="Cannot delete plugin '%s' entry from the database. Error: %s"
-SP.CANNOT_DELETE_PLUGIN_FILE_NOT_EXISTS="Cannot delete plugin. File %s does not exist"
-SP.CANNOT_DELETE_PLUGIN_SECTION_DB_ERR="Cannot delete plugin '%s' section entries from the database. Error: %s"
+SP.CANNOT_DELETE_PLUGIN_DB_ERR="Cannot delete plugin '%s' entry from the database. Error: %s."
+SP.CANNOT_DELETE_PLUGIN_FILE_NOT_EXISTS="Cannot delete plugin. File %s does not exist."
+SP.CANNOT_DELETE_PLUGIN_SECTION_DB_ERR="Cannot delete plugin '%s' section entries from the database. Error: %s."
 SP.CANNOT_DELETE_SELECTED_OPTIONS="Cannot delete selected options. Db reports: %s."
 SP.CANNOT_DETERMINE_FIELD_TYPE="Cannot determine field type. Db reports: %s."
-SP.CANNOT_DROP_TABLE="Cannot drop table '%s'. Db query failed. Error: %s"
-SP.CANNOT_EXECUTE_QUERIES="Cannot execute queries. Error: %s"
+SP.CANNOT_DROP_TABLE="Cannot drop table '%s'. Db query failed. Error: %s."
+SP.CANNOT_EXECUTE_QUERIES="Cannot execute queries. Error: %s."
 SP.CANNOT_EXTRACT_ARCHIVE="Cannot extract archive '%s' to '%s'"
 SP.CANNOT_GET_CHILDS_DB_ERR="Cannot get child. Db reports: %s."
 SP.CANNOT_GET_FIELD_FOR_NAMES="Cannot get field for names. Db reports: %s."
@@ -63,40 +63,40 @@ SP.CANNOT_GET_FIELDS_DATA_DB_ERR="Cannot get fields data. Db reports: %s."
 SP.CANNOT_GET_FIELDS_DB_ERR="Cannot get fields. Db reports: %s."
 SP.CANNOT_GET_FIELDS_IN_SECTION="Cannot get fields in section %d"
 SP.CANNOT_GET_FIELD_TYPES_DB_ERR="Cannot get field types. Db reports: %s."
-SP.CANNOT_GET_IMG_INFO="Cannot get info about given image. File %s may not be an image or is named improperly. Check the filetype and try again."
+SP.CANNOT_GET_IMG_INFO="Cannot get info about given image. File %s may not be an image or is named improperly. Check the file type and try again."
 SP.CANNOT_GET_INSTALLED_EXTS="Cannot get list of installed extensions. Error: %s"
 SP.CANNOT_GET_OBJECT_DB_ERR="Cannot get object. Db reports: %s."
 SP.CANNOT_GET_PAYMENTS="Cannot get payments. Db reports: %s."
-SP.CANNOT_GET_PERMISSION_LIST="Cannot get permission list. Error: %s"
-SP.CANNOT_GET_PERMISSIONS="Cannot get permissions. Error: %s"
+SP.CANNOT_GET_PERMISSION_LIST="Cannot get permission list. Error: %s."
+SP.CANNOT_GET_PERMISSIONS="Cannot get permissions. Error: %s."
 SP.CANNOT_GET_PERMISSIONS_DB_ERR="Cannot get permissions. Db reports %s."
 SP.CANNOT_GET_PLUGINS_DB_ERR="Cannot get plugins. Db reports: %s."
 SP.CANNOT_GET_RELATIONS_DB_ERR="Cannot get relations. Db reports: %s."
 SP.CANNOT_GET_SECTIONS_LIST="Cannot get sections list. Db reports: %s."
-SP.CANNOT_GET_SELECTED_OPTION="Cannot get selected options from the database. DB reports %s"
+SP.CANNOT_GET_SELECTED_OPTION="Cannot get selected options from the database. DB reports %s."
 SP.CANNOT_GET_SELECTED_OPTIONS="Cannot get selected options. Db reports: %s."
 SP.CANNOT_GET_SESSION_DB_ERR="Cannot get session results. Db reports: %s."
-SP.CANNOT_GET_USERS_DATA="Cannot get user data"
-SP.CANNOT_GET_USERS_PERMISSIONS="Cannot get user permissions"
+SP.CANNOT_GET_USERS_DATA="Cannot get user data."
+SP.CANNOT_GET_USERS_PERMISSIONS="Cannot get user permissions."
 SP.CANNOT_INC_COUNTER_DB="Cannot increase counter. Db reports: %s."
 SP.CANNOT_INSERT_GROUPS_DB_ERR="Cannot insert groups/rule. Db reports: %s."
-SP.CANNOT_INSTALL_EXT_CORE="Cannot install extension. This extension requires SobiPro version >= %s, But the currently installed version is %s."
-SP.CANNOT_INSTALL_EXT_FIELD="Cannot install extension. This extension requires %s %s version >= %s, But the currently installed version is %s."
-SP.CANNOT_INSTALL_EXT_PLG="Cannot install extension. This extension requires %s %s version >= %s, But this %s is not installed."
-SP.CANNOT_INSTALL_EXT_PLG_NO_VERSION="Cannot install extension. This extension requires %s %s, But this %s is not installed."
-SP.CANNOT_INSTALL_EXT_REQ="Cannot install extension. This extension requires %s version >= %s, But the currently installed version is %s."
-SP.CANNOT_INSTALL_EXT_REQU_CMS="Cannot install extension. This extension requires %s version >= %s, But the currently installed CMS is %s."
-SP.CANNOT_INSTALL_FIELD_DB_ERR="Cannot install new field. Db insert failed. Error: %s"
-SP.CANNOT_INSTALL_PLUGIN_DB_ERR="Cannot install new plugin. Db insert failed. Error: %s"
-SP.CANNOT_LOAD_CONFIG_VIEW="Cannot load config file for the view. File '%s' does not exist"
-SP.CANNOT_LOAD_FILE_AT="Cannot load file at '%s'"
+SP.CANNOT_INSTALL_EXT_CORE="Cannot install extension. This extension requires SobiPro version >= %s, but the currently installed version is %s."
+SP.CANNOT_INSTALL_EXT_FIELD="Cannot install extension. This extension requires %s %s version >= %s, but the currently installed version is %s."
+SP.CANNOT_INSTALL_EXT_PLG="Cannot install extension. This extension requires %s %s version >= %s, but this %s is not installed."
+SP.CANNOT_INSTALL_EXT_PLG_NO_VERSION="Cannot install extension. This extension requires the %s %s, but this %s is not installed."
+SP.CANNOT_INSTALL_EXT_REQ="Cannot install extension. This extension requires %s version >= %s, but the currently installed version is %s."
+SP.CANNOT_INSTALL_EXT_REQU_CMS="Cannot install extension. This extension requires %s version >= %s, but the currently installed CMS is %s."
+SP.CANNOT_INSTALL_FIELD_DB_ERR="Cannot install new field. Db insert failed. Error: %s."
+SP.CANNOT_INSTALL_PLUGIN_DB_ERR="Cannot install new plugin. Db insert failed. Error: %s."
+SP.CANNOT_LOAD_CONFIG_VIEW="Cannot load config file for the view. File '%s' does not exist."
+SP.CANNOT_LOAD_FILE_AT="Cannot load file at '%s'."
 SP.CANNOT_LOAD_FILE_AT_NOT_READABLE="Cannot load file at %s. File does not exist or is not readable."
 SP.CANNOT_LOAD_PARSER="Cannot load '%s' parser"
 SP.CANNOT_LOAD_TEMPLATE_AT="Cannot load template: %s."
-SP.CANNOT_LOAD_TEMPLATE_FILE_AT="Cannot load template file '%s'"
-SP.CANNOT_MOVE_DIRECTORY="Cannot move directory '%s' to '%s'"
-SP.CANNOT_REMOVE_FIELD_DB_ERR="Cannot remove field '%s'. Db query failed. Error: %s"
-SP.CANNOT_REMOVE_PERMISSION_DB_ERR="Cannot remove permission "%s.%s.%s". Db query failed. Error: %s"
+SP.CANNOT_LOAD_TEMPLATE_FILE_AT="Cannot load template file '%s'."
+SP.CANNOT_MOVE_DIRECTORY="Cannot move directory '%s' to '%s'."
+SP.CANNOT_REMOVE_FIELD_DB_ERR="Cannot remove field '%s'. Db query failed. Error: %s."
+SP.CANNOT_REMOVE_PERMISSION_DB_ERR="Cannot remove permission "%s.%s.%s". Db query failed. Error: %s."
 SP.CANNOT_REMOVE_PERMISSIONS_DB_ERR="Cannot remove permissions. Db reports %s."
 SP.CANNOT_REMOVE_RULES_DB_ERR="Cannot remove rules. Db reports %s."
 SP.CANNOT_SAVE_CATEGORY_DB_ERR="Cannot save category. Db reports: %s."
@@ -111,15 +111,15 @@ SP.CANNOT_SEARCH_DB_ERR="Cannot search. Db reports: %s."
 SP.CANNOT_STORE_FIELD_OPTIONS_DB_ERR="Cannot store field options. Db reports: %s."
 SP.CANNOT_TRANSLATE_OBJECT="Cannot translate object. %s"
 SP.CANNOT_UPDATE_PLUGIN="Cannot update plugin. Error: %s"
-SP.CANNOT_VALIDATE_SCHEMA_DEF_AT="Cannot validate file '%s' against the schema definition at '%s'"
+SP.CANNOT_VALIDATE_SCHEMA_DEF_AT="Cannot validate file '%s' against the schema definition at '%s'."
 SP.CANNOT_VALIDATE_SSL_CERT="Cannot validate SSL certificate. %s"
-SP.CANNOT_WRITE_TO_FILE_AT="Cannot write to file %s"
-SP.COULD_NOT_COPY_DIRECTORY="Could not copy directory %s to %s"
-SP.CREATE_IMAGE_MISSING_HANDLER="Cannot create image from the file %s. Missing handler function for image type %s"
+SP.CANNOT_WRITE_TO_FILE_AT="Cannot write to file %s."
+SP.COULD_NOT_COPY_DIRECTORY="Could not copy directory %s to %s."
+SP.CREATE_IMAGE_MISSING_HANDLER="Cannot create image from the file %s. Missing handler function for image type %s."
 SP.CRITICAL_SECTION="Critical Section Violated"
-SP.CURL_NOT_INSTALLED="Client URL Library is not installed"
+SP.CURL_NOT_INSTALLED="Client URL Library is not installed."
 SP.DB_REPORTS_ERR="Db reports: %s."
-SP.ENTRY_DOES_NOT_EXIST="Entry %s does not exist"
+SP.ENTRY_DOES_NOT_EXIST="Entry %s does not exist."
 SP.FIELD_FILTER_ERR="Fatal error. Data input filter '%s' does not exist."
 SP.FIELD_IMG_CANNOT_RESAMPLE="Cannot resample image: %s."
 SP.FIELD_IMG_TOO_LARGE="The uploaded file size for field '%s' is too big. The file size is %d. Maximal allowed file size cannot be greater than %d."
@@ -134,11 +134,11 @@ SP.FIELD_REQUIRED_ERR_OPT="Please select an option in field '%s'. This is a requ
 SP.FIELD_REQUIRED_ERR="Please enter data in the field '%s'. This is a required field!"
 SP.FIELD_URL_CANNOT_VALIDATE="Cannot validate url. Error: %s."
 SP.FIELD_URL_ERR="The given URL '%s' does not seem to exist or is not accessible. Please try again. Response code is '%s'."
-SP.FILE_DOES_NOT_EXIST="File %s does not exist"
+SP.FILE_DOES_NOT_EXIST="File %s does not exist."
 SP.FILE_NOT_FOUND="File %s not found."
-SP.FUNCFILE_DEFINED_BUT_FILE_DOES_NOT_EXISTS="Functions file has been defined but file %s does not exist"
-SP.IDENTIFIER_EXPECTED="Identifier expected for multi task"
-SP.INVALID_VALUES_FOR_RESAMPLE="Invalid values for resemble. Width: [%d] / Height: [%d]"
+SP.FUNCFILE_DEFINED_BUT_FILE_DOES_NOT_EXISTS="Functions file has been defined but file %s does not exist."
+SP.IDENTIFIER_EXPECTED="Identifier expected for multi task."
+SP.INVALID_VALUES_FOR_RESAMPLE="Invalid values for resemble. Width: [%d] / Height: [%d]."
 SP.METHOD_DOES_NOT_EXISTS="Method %s does not exist."
 SP.MISSING_CATEGORY="Missing category"
 SP.MISSING_FILE_TO_SAVE_AT="Missing file to save %s"
