Extension Installer layout/6 Versuch die Legacy apps wieder zu korrigieren. Neue Awesome CSS hat es zerstört :(

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1072,7 +1072,7 @@ SP.EX.MANAGER="Application Manager"
 SP.EX.LAST_UPDATE="Last update:"
 SP.EX.UPDATING="Please wait, updating applications list."
 SP.EX.DOWNLOADING="Please wait, downloading application."
-SP.EX.SSL_VERIFY="Please verify repository provider information."
+SP.EX.SSL_VERIFY="Repository provider information"
 SP.EX.CONNECTING_TO_REPO="Connecting to the repository."
 SP.EX.SELECT_EXT_FROM_LIST="Please select an application from the list first."
 SP.EX.CONNECTING_TO_REPO_NAME="Connecting to repository var:[repo]"
@@ -1150,7 +1150,7 @@ SP.EX.REPO_DESCRIPTION="Description"
 SP.EX.REPO_MAINTAINER="Maintainer"
 SP.EX.MAINT_SUPPORT="Support"
 ; SOAP Response/Request
-SP.EX.SOAP_RESP_HEAD="The repository demands the following information"
+SP.EX.SOAP_RESP_HEAD="The repository demands the following information:"
 SP.EX.SOAP_RESP_SEND_BT="Send"
 SP.EX.SOAP_RESP_REQ="required"
 SP.EX.SOAP_RESP_OPT="optional"
