No default filter for fields title, contact and city in demo data

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -64,6 +64,7 @@
    (!) No fix MyISAM database type on installation
    (!) Sendmail account information removed from system check file
    (!) Category meta description does not longer ends with a dot
+   (!) No default filter for fields title, contact and city in demo data
 
    (#) {entry.url} placeholder doesn't work (Issue #708)
    (#) Typo in text label in Entry Manager
