Arrows funktionieren nicht richtig Der re-order button ist gegreyed obwohl sortierung auf position

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,10 @@
 ; SobiPro 1.1
 ;=========
 
+SP.CATEGORY_POSITION_CHANGED="Category Position Changed"
+SP.ENTRY_POSITION_CHANGED="Entry Position Changed"
+SP.CATEGORIES_ARE_RE_ORDERED="Categories are re-ordered now"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
