--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,10 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.CATEGORY_POSITION_CHANGED="Category Position Changed"
-SP.ENTRY_POSITION_CHANGED="Entry Position Changed"
-SP.CATEGORIES_ARE_RE_ORDERED="Categories are re-ordered now"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -203,6 +199,9 @@ SP.CAT.PUBLISHED="Category/Categories has/have been published"
 SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
 SP.ADD_NEW_ENTRY="Add New Entry"
 SP.AMN.ADD="Add"
+SP.CATEGORY_POSITION_CHANGED="Category position changed."
+SP.ENTRY_POSITION_CHANGED="Entry position changed."
+SP.CATEGORIES_ARE_RE_ORDERED="Categories are re-ordered now."
 
 ;; Entries
 SP.HEADER_ENTRIES_NAME="Entry Name"
@@ -1164,7 +1163,7 @@ SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
 SP.EX.SECTION="Application Manager"
 SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
-SP.UPD.UPDATE_AVAILABLE="New version %s is available"
+SP.UPD.UPDATE_AVAILABLE="New version %s is available"Entry Position Changed
 SP.UPD.UP_TO_DATE="Current version is up to date"
 SP.APP.BANK_TRANSFER="Bank Payment"
 SP.APP.PAYPAL="PayPal Payment"
