Arrows funktionieren nicht richtig Der re-order button ist gegreyed obwohl sortierung auf position

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,8 @@
 ; SobiPro 1.1
 ;=========
 
+SP.NEW_FIELDS_ORDERING_HAS_BEEN_SAVED="New fields ordering has been saved"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
