--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -48,7 +48,8 @@
    (+) Possibility to define exact type of custom output including header content type, exit and clear
    (+) Limit XML raw data to a specific IP
 
-   (-) Vehicle template removed. Will be a separate template now.
+   (-) Vehicle template removed; will be a separate template now
+   (-) SobiPro Admin Menu Module removed; will be a separate app now
 
    (!) Administrator UI redesigned using Bootstrap library and new XML templates
    (!) SPHeader::addMeta() takes now optional list of custom parameters as an array
