--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,8 +19,6 @@
 ; SobiPro 1.1
 ;=========
 
-SP.NEW_FIELDS_ORDERING_HAS_BEEN_SAVED="New fields ordering has been saved"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -113,6 +111,7 @@ SP.FMN.ORDER_BY_ISFREE_DESC="Paid first"
 SP.FMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position descending"
 SP.FMN.STATE_CHANGE_NO_ID="Please select field(s) from the list first!"
+SP.NEW_FIELDS_ORDERING_HAS_BEEN_SAVED="New fields ordering has been saved."
 
 ; Fields
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
