--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -15,6 +15,7 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.err.ini $
 
+SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
 
 SP.FIELD_CC_FIXED_CID_NOT_SELECTED="Category chooser: method set to fixed id but no category id has been selected"
 SP.FILE_WRONG_TYPE="The uploaded file is not allowed by type \"%s\"."
