--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -30,8 +30,8 @@ SP.SAVE="Save"
 SP.USER_SELECT_HEADER="Select User"
 SP.LOAD_MORE="Load More"
 SP.FILTER="Filter..."
-SP.OBJ_PUBLISHED="var:[type] has been published."
-SP.OBJ_UNPUBLISHED="var:[type] has been unpublished."
+SP.OBJ_PUBLISHED="var:[type](s) has been published."
+SP.OBJ_UNPUBLISHED="var:[type](s) has been unpublished."
 SP.CREATED_BY="Created by"
 SP.OWNER="Owner"
 SP.CREATED_BY_IP="IP"
