propset, new header set .htaccess files removed

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -1,26 +1,23 @@
-; @version: $Id: en-GB.com_sobipro.err.ini 2272 2012-02-28 17:17:25Z Sigrid Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
-; ===================================================
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2012-02-28 18:17:25 +0100 (Tue, 28 Feb 2012) $
-; $Revision: 2272 $
-; $Author: Sigrid Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.err.ini $
 
-SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
 
-SP.FIELD_CC_FIXED_CID_NOT_SELECTED="Category chooser: method set to fixed id but no category id has been selected"
-SP.FILE_WRONG_TYPE="The uploaded file is not allowed by type \"%s\"."
-SP.CANNOT_UPLOAD_FILE="Cannot upload file"
-SP.CANNOT_UPLOAD_FILE_NO_DATA="No file received"
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
+
 
 ;=========
 ; SobiPro 1.0.1
