--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -1,19 +1,23 @@
-; @version: $Id: en-GB.com_sobipro.ini 2404 2012-04-27 14:14:12Z Sigrid Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
-; ===================================================
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2012-04-27 16:14:12 +0200 (Fri, 27 Apr 2012) $
-; $Revision: 2404 $
-; $Author: Sigrid Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.ini $
+
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
+
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
