--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -1,19 +1,23 @@
-; @version: $Id: en-GB.com_sobipro.js.ini 919 2011-03-04 16:56:17Z Sigrid Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
-; ===================================================
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2011-03-04 17:56:17 +0100 (Fri, 04 Mar 2011) $
-; $Revision: 919 $
-; $Author: Sigrid Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.js.ini $
+
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
+
 
 SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
