--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -392,6 +392,8 @@ SP.GBN.CFG.PBY_EXPL="<strong>Heads up!</strong> If you disable the 'powered by' 
 SP.GBN.CFG.PAYMENTS="Payment"
 SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
+SP.FLR.MSG_FILTER_SAVED="All changes saved!"
+
 
 ; Applications Installer/Repository
 SP.EXTENSIONS.HEADER_VERSION="Version"
@@ -413,7 +415,6 @@ SP.PROGRESS_WORKING="Working ..."
 SP.CMSEX_INSTALLED="Extension (%s) \"%s\" has been installed."
 SP.EX.INSTALL="Install Application:"
 SP.EX.DEL_REPO_ERROR="Cannot delete repository definition."
-
 
 ; Template
 SP.TP.VER="Version"
@@ -443,7 +444,6 @@ SP.ACL_ENABLED="Enabled"
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
-;;;SP.FLR.MSG_FILTER_SAVED="All changes saved"
 
 ;;SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 
