--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -21,6 +21,7 @@
 ; $HeadURL$
 
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s"
+SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
 
 ;=========
 ; SobiPro 1.0.1
