dTree replaced to native JavaScript  method

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -21,6 +21,8 @@
 ; $HeadURL$
 
 
+SP.EXTENDED_SEARCH="Extended Search"
+
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
 SP.UPLOAD_SELECT="Select File"
