add entry screen - in progress

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -22,6 +22,12 @@
 
 
 SP.EXTENDED_SEARCH="Extended Search"
+SP.PAYMENT_CHOSEN_FOLLOWING_OPTIONS="You have chosen following non-free options"
+SP.PAYMENT_NEXT_STEP="What do you like to do"
+SP.PAYMENT_POSITION_NAME="Name"
+SP.PAYMENT_POSITION_NET="Net"
+SP.PAYMENT_POSITION_GROSS="Gross"
+SP.PAYMENT_POSITION_SUMMARY="Summary"
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
