add entry screen - in progress

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -28,6 +28,8 @@ SP.PAYMENT_POSITION_NAME="Name"
 SP.PAYMENT_POSITION_NET="Net"
 SP.PAYMENT_POSITION_GROSS="Gross"
 SP.PAYMENT_POSITION_SUMMARY="Summary"
+SP.PAYMENT_SELECT_PAYMENT="Please select payment method below"
+
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
