add entry screen - first draft

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -29,6 +29,11 @@ SP.PAYMENT_POSITION_NET="Net"
 SP.PAYMENT_POSITION_GROSS="Gross"
 SP.PAYMENT_POSITION_SUMMARY="Summary"
 SP.PAYMENT_SELECT_PAYMENT="Please select payment method below"
+SP.ENTRY_LOCATED_IN="Located in:"
+SP.ENTRY_MANAGE_DISABLE="Disable Entry"
+SP.ENTRY_MANAGE_ENABLE="Enable Entry"
+SP.ENTRY_MANAGE_APPROVE="Approve Entry"
+SP.ENTRY_MANAGE_EDIT="Edit Entry"
 
 
 SP.START_UPLOAD="Upload"
