--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,6 +24,8 @@
 ;=========
 ; SobiPro 1.1
 ;=========
+SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
+SP.CATEGORIES_IN_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
@@ -194,7 +196,6 @@ SP.FMN.CC_SEARCH_METHOD="Search Method"
 ; Category and Entry Manager
 SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
-SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 SP.CHECKED_OUT="Checked out by %s <br/> until %s"
 SP.ROW_PENDING="Pending<br/>Valid from %s"
 SP.ROW_EXPIRED="Expired<br/>Valid until %s"
