--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -26,7 +26,7 @@ SP.TB.SECTIONS="Sections"
 ; SobiPro 1.1
 ;=========
 SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
-SP.CATEGORIES_IN_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
+SP.CATEGORIES_IN_LIST_HEAD="Categories in: var:[category_name]"
 
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
@@ -195,8 +195,8 @@ SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
 SP.FMN.CC_SEARCH_METHOD="Search Method"
 
 ; Category and Entry Manager
-SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
-SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
+SP.CAT.ENTRIES_LIST_HEAD="Entries in: var:[category_name]"
+SP.CAT.CATEGORY_LIST_HEAD="Categories in: var:[category_name]"
 SP.CHECKED_OUT="Checked out by %s <br/> until %s"
 SP.ROW_PENDING="Pending<br/>Valid from %s"
 SP.ROW_EXPIRED="Expired<br/>Valid until %s"
@@ -1221,7 +1221,7 @@ SP.FM.NO_FILTER="No Filter"
 SP.FM.DESCRIPTION="Description"
 SP.FM.SITE_TITLE="Fields Manager"
 SP.FM.HEAD_TITLE="Fields Manager"
-SP.FM.FIELDS_FOR="Fields for: <small>var:[section]</small>"
+SP.FM.FIELDS_FOR="Fields for: var:[section]"
 SP.FM.UNIQUE_DATA="Unique Data"
 SP.FM.ADD_META_KEYS="Add to Meta Keys"
 SP.FM.ADD_META_DESC="Add to Meta Description"
