nach Save im Filterwindow, sollte das Window schließen
[X]es fehlt die Funktion zum Löschen von einem Filter

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -56,7 +56,7 @@ SP.JS_SELECT_PARENT_CATEGORY="Select Parent Category"
 SP.JS_GRP_DEL_WARN="Are you sure you want to delete this group? All values within this group will be deleted too!"
 SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field"
 SP.JS_EDIT_FILTER="Edit Filter"
-SP.JS_DEL_FILTER_WARN="Are You sure you want to delete this filter?"
+SP.JS_DELETE_FILTER="Delete"
 SP.JS_FM_TEXTAREA_WYSIWYG_NOLIMIT_WARN="You cannot limit the length of a textarea field when the WYSIWYG editor is enabled. If you want to enable the editor, the max. length limit will be disabled."
 SP.JS_FM_TEXTAREA_WYSIWYG_NOLIMIT_WARN2="You cannot limit the length of a textarea field when the WYSIWYG editor is enabled. If you want to limit the length, the editor must be disabled."
 SP.JS_PBY_NO="Please don't forget to donate! :)"
