--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -22,6 +22,7 @@
 
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s"
 SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
+SP.FILTER_NOT_FOUND="Filter cannot be found"
 
 ;=========
 ; SobiPro 1.0.1
