--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -395,7 +395,7 @@ SP.GBN.CFG.PAYMENTS="Payment"
 SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 SP.FLR.MSG_FILTER_SAVED="All changes saved!"
-SP.FLR.MSG_FILTER_DELETED="Input filter has been deleted"
+SP.FLR.MSG_FILTER_DELETED="Input filter has been deleted."
 
 
 ; Applications Installer/Repository
