--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -23,6 +23,7 @@
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s"
 SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
 SP.FILTER_NOT_FOUND="Filter cannot be found"
+SP.FIELD_TEXTAREA_LIMIT="You can input a maximum of %d chars into %s field but the current length is %d"
 
 ;=========
 ; SobiPro 1.0.1
