--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -36,4 +36,4 @@ SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site."
 SP.DEBUG_LEVEL_OK="Debug level is correct."
 SP.DEBUG_XML_ENABLED="XML output is enabled."
 SP.DEBUG_XML_DISABLED="XML output is disabled."
-SP.COMPAT_MODE_WARNING="This application is working in a legacy mode so the functionality and, especially the layout is not fully compatible. Sorry for this inconvenience"
+SP.COMPAT_MODE_WARNING="This application is working in legacy mode therefore the functionality and especially the layout is not fully compatible. Sorry for this inconvenience."
