--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,20 +20,23 @@
 ; $Author$
 ; $HeadURL$
 
-SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s"
-SP.CANNOT_CREATE_DIR="Cannot create directory at %s"
-SP.FILTER_NOT_FOUND="Filter cannot be found"
-SP.FIELD_TEXTAREA_LIMIT="You can input a maximum of %d chars into %s field but the current length is %d"
+;=========
+; SobiPro 1.1
+;=========
+SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s."
+SP.CANNOT_CREATE_DIR="Cannot create directory at %s."
+SP.FILTER_NOT_FOUND="Filter cannot be found."
+SP.FIELD_TEXTAREA_LIMIT="You can input a maximum of %d chars into %s field but the current length is %d."
 
 ;=========
 ; SobiPro 1.0.1
 ;=========
-SP.PAGE_NOT_FOUND="Page Not Found"
+SP.PAGE_NOT_FOUND="Page Not Found!"
 
 ;=========
 ; SobiPro 1.0 RC4
 ;=========
-SP.ERRMSG.MEMLIMIT_LIMITED_ENTRIES="The number of displayed entries has been limited to %d due to memory limit"
+SP.ERRMSG.MEMLIMIT_LIMITED_ENTRIES="The number of displayed entries has been limited to %d due to memory limit."
 
 ;=========
 ; SobiPro 1.0 RC2
