--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -20,10 +20,14 @@
 ; $Author$
 ; $HeadURL$
 
+;=========
+; SobiPro 1.1
+;=========
 
+; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
 SP.PAYMENT_CHOSEN_FOLLOWING_OPTIONS="You have chosen following non-free options"
-SP.PAYMENT_NEXT_STEP="What do you like to do"
+SP.PAYMENT_NEXT_STEP="What do you like to do?"
 SP.PAYMENT_POSITION_NAME="Name"
 SP.PAYMENT_POSITION_NET="Net"
 SP.PAYMENT_POSITION_GROSS="Gross"
