new publish / unpublish /approve handling

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -24,6 +24,8 @@
 SP.JS_SELECT_CATEGORY="Select category"
 SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first."
 SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section."
+SP.JS_PROGRESS_WORKING="Working ..."
+SP.JS_PROGRESS_DONE_REDIRECTING="All done. Please wait - refreshing page"
 
 ;=========
 ; SobiPro 1.0 RC4
