--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -154,7 +154,7 @@ SP.EN.PUBLISHED="Entry has been published."
 SP.EN.UNPUBLISHED="Entry has been unpublished."
 SP.EN.ADD_TITLE="var:[section] - Add New Entry"
 SP.EN.ADD_PATH_TITLE="Add New Entry"
-SP.EN.IS_CHECKED_OUT="This entry is currently being edited by another user."
+SP.EN.IS_CHECKED_OUT="Entry '%s' is currently being edited by another user."
 
 ;=========
 ; Fields
