--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -232,10 +232,10 @@ SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_FIELD_ASC="ascending"
 SP.EMN.ORDER_BY_FIELD_DESC="descending"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
-SP.EMN.APPROVED="Approval has been granted."
-SP.EMN.UNAPPROVED="Approval has been revoked."
-SP.EN.PUBLISHED="Entry has been published."
-SP.EN.UNPUBLISHED="Entry has been unpublished."
+SP.EMN.APPROVED="Approval for entry '%s' has been granted."
+SP.EMN.UNAPPROVED="Approval for entry '%s' has been revoked."
+SP.EN.PUBLISHED="Entry '%s' has been published."
+SP.EN.UNPUBLISHED="Entry '%s' has been unpublished."
 SP.EMN.REORDERED="Entries are re-ordered now."
 
 ;; Categories
