--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -234,7 +234,7 @@ SP.TP.ADD_CATEGORY_BT="Add Category &gt;&gt;"
 SP.TP.SAVE_BT="Close"
 SP.TP.CAT_BOX="Category:"
 SP.TP.SEL_CAT_BOX="Select Categories:"
-SP.TP.PAYMENT_ADD="Click the checkbox on the left side if you wish to activate this option"
+SP.TP.PAYMENT_ADD="Click the checkbox on the left side if you wish to activate this option."
 
 ;=========
 ; Applications
