--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -186,7 +186,7 @@ SP.PN.CURRENT_SITE="Site var:[current] of var:[pages]"
 SP.SH.SEARCH_FOR_BOX="search..."
 SP.SH.SEARCH_FOUND_RESULTS="Found var:[count] result(s)"
 SP.SH.SEARCH_FOR="Search for"
-SP.SH.SEARCH_START="Start search"
+SP.SH.SEARCH_START="Start Search"
 SP.SH.START="Search"
 SP.SH.FIND_ENTRIES_THAT_HAVE="Find entries that have"
 SP.SH.FIND_ENTRIES_THAT_HAVE_ALL_WORDS="All words"
