--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,9 @@
 ; $HeadURL$
 
 SP.TB.SECTIONS="Sections"
+SP.SEC.CFG.SEARCH_SETTINGS="Search Settings"
+SP.SECOND_ORDER_DISABLED="Disabled"
+SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
 
 ;=========
 ; SobiPro 1.1
