Bug #782 Template override selection

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,6 +24,9 @@ SP.TB.SECTIONS="Sections"
 SP.SEC.CFG.SEARCH_SETTINGS="Search Settings"
 SP.SECOND_ORDER_DISABLED="Disabled"
 SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
+SP.PERMISSIONS.DELETE_*="delete any"
+SP.PERMISSIONS.DELETE_OWN="delete own"
+
 
 ;=========
 ; SobiPro 1.1
