--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -38,6 +38,7 @@ SP.ENTRY_MANAGE_DISABLE="Disable Entry"
 SP.ENTRY_MANAGE_ENABLE="Enable Entry"
 SP.ENTRY_MANAGE_APPROVE="Approve Entry"
 SP.ENTRY_MANAGE_EDIT="Edit Entry"
+SP.ENTRY_MANAGE_DELETE="Delete Entry"
 
 
 SP.START_UPLOAD="Upload"
