--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -51,8 +51,8 @@ Legend:
    (+) Joomla! 3.0 compatibility (needs at least Joomla! 3.0.2)
    (+) Auto-suggest feature for search function
    (+) Excluding particular user groups for administrator templates override
-   (+) Second ordering for entries in the search function
-   (+) Possibility to delete an entry in frontend
+   (+) Second ordering for entries in search function
+   (+) Possibility to delete an entry from frontend
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
