User listing view

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -39,6 +39,7 @@ SOBI_SELECTED_OBJECT="Selected"
 SOBI_TPL_OVERRIDE="Template Override"
 SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
 SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
+SP.TASK_LIST.USER="User Listing"
 
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
@@ -53,3 +54,5 @@ SP.SOBI_SELECT_SECTION="Select Section"
 SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
 SP.SOBI_SELECT_CATEGORY="Select Category"
 SP.SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
+SOBI_USER_LISTING="User Listing"
+SOBI_USER_LISTING_EXPL="List of 'my' entries"
