--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -40,6 +40,9 @@ SP.ENTRY_MANAGE_APPROVE="Approve Entry"
 SP.ENTRY_MANAGE_EDIT="Edit Entry"
 SP.ENTRY_MANAGE_DELETE="Delete Entry"
 
+SP.UL.TITLE="var:[user]'s entries"
+SP.UL.PATH_TITLE="var:[user]'s entries"
+
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
